--- a/css/styles.css
+++ b/css/styles.css
@@ -204,6 +204,13 @@ img {
   background: var(--hero-background);
   padding-top: 200px;
   padding-bottom: 200px;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background-hero.jpg);
+  background-repeat: no-repeat;
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-position: center;
+  background-size: cover;
 }
 
 h1 {
@@ -260,6 +267,20 @@ h1 {
 .specialty-container {
   display: flex;
   padding-left: 0;
+}
+
+.specialty-icons-container {
+  width: 270px;
+  height: 120;
+  background-color: #F5F4FA;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.business-icons {
+  fill: #212121;
 }
 
 .specialty .title {
@@ -341,15 +362,61 @@ h1 {
   margin-bottom: 10px;
 }
 
+.team-social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.team-icons-items {
+  width: 44px;
+  height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.team-icons {
+  fill: #AFB1B8;
+}
+
+.team-icons:hover,
+.team-icons:focus {
+  fill: var(--active-color);
+}
+
 .team .text {
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
+  margin-bottom: 16px;
 }
 
 .team .card {
   padding-top: 30px;
   padding-bottom: 30px;
+}
+
+/* clients-styles */
+.clients {
+  padding-top: 94px;
+}
+
+.clients-text {
+  margin-bottom: 50px;
+}
+
+.clients-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
+.clients-icons-items {
+  border: 1px solid #AFB1B8;
+  /* width: 170px;
+  height: 92px; */
 }
 
 /* projects-styles */
@@ -373,8 +440,13 @@ h1 {
   letter-spacing: 0.03em;
   color: var(--main-color);
   background: var(--button-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  /* box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12); */
   padding: 6px 22px;
+}
+
+.filter-btn:hover,
+.filter-btn:focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .filter-item:not(:last-child) {
@@ -422,6 +494,10 @@ h1 {
 
 .item:nth-last-child(-n+3) {
   margin-bottom: 0;
+}
+
+.item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 /* footer styles */
