--- a/css/styles.css
+++ b/css/styles.css
@@ -394,8 +394,6 @@ h1 {
 
 .team-social-items {
   border-radius: 50%;
-
-
 }
 
 .team-social-items:hover {
@@ -403,6 +401,10 @@ h1 {
   background-color: var(--active-color);
   /* border: 1px solid var(--main-white-color); */
   /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
+}
+
+.team-social-items:not(:last-child) {
+  margin-right: 10px;
 }
 
 
