--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ html {
   --active-color: #2196F3;
   --second-color: #757575;
   --button-color: #f5f4fa;
+  --icons-color: #AFB1B8;
   --main-white-color: #ffffff;
   --hero-background: #2F303A;
   --main-background: #F5F5F5;
@@ -155,11 +156,8 @@ img {
 
 .contact-item-icon {
   margin-right: 10px;
-
-}
-
-.header-icons {
   fill: var(--second-color);
+
 }
 
 /* .contact .mail {
@@ -175,11 +173,12 @@ img {
 .contact-item-icon:hover,
 .contact-item-icon:focus {
   color: var(--active-color);
+  fill: currentColor;
 }
 
-.contact-item-icon:hover,
-.contact-item-icon:focus {
-  stroke: var(--active-color);
+.header-icons {
+  margin-right: 10px;
+  /* padding-right: 10px; */
 }
 
 .site-nav .link:active,
@@ -211,7 +210,6 @@ img {
 /* main styles */
 .section {
   padding-bottom: 94px;
-  /* padding-top: 200px; */
 }
 
 /* hero styles */
@@ -286,12 +284,12 @@ h1 {
 
 .specialty-icons-container {
   width: 270px;
-  height: 120;
   background-color: #F5F4FA;
   display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 30px;
+  padding: 25px 100px;
 }
 
 .business-icons {
@@ -353,7 +351,6 @@ h1 {
 
 .team-list {
   display: flex;
-
   padding-right: 0;
 }
 
@@ -361,7 +358,6 @@ h1 {
   background: var(--main-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   flex-basis: calc((100% - 30px) / 4);
 }
 
@@ -382,39 +378,39 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
+  color: var(--icons-color);
+  flex-basis: calc((100% - 10px) / 4);
 }
+
 
 .team-social-items {
   width: 44px;
   height: 44px;
+  fill: var(--icons-color);
+}
+
+.team-icons-items {
   display: flex;
+  width: 100%;
+  height: 100%;
   align-items: center;
   justify-content: center;
+  fill: var(--icons-color);
+}
+
+.team-icons-items:hover,
+.team-icons-items:focus {
+  fill: var(--main-white-color);
+  border-radius: 50%;
+  background-color: var(--active-color);
 }
 
 .team-social-items {
   border-radius: 50%;
 }
 
-.team-social-items:hover {
-  /* border-radius: 50%; */
-  background-color: var(--active-color);
-  /* border: 1px solid var(--main-white-color); */
-  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
-}
-
 .team-social-items:not(:last-child) {
   margin-right: 10px;
-}
-
-
-.team-icons {
-  fill: #AFB1B8;
-}
-
-.team-icons:hover,
-.team-icons:focus {
-  fill: var(--main-white-color);
 }
 
 .team .text {
@@ -442,28 +438,27 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-
 }
 
 .client-items {
-  border: 1px solid #AFB1B8;
-  /* width: 170px;
-  height: 92px; */
+  fill: var(--icons-color);
+}
+
+.clients-icons-items {
+  border: 1px solid var(--second-color);
   border-radius: 4px;
-  padding: 16px 32px;
+  fill: var(--icons-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 168px;
+  height: 90px;
 }
 
-.client-items:hover {
-  border: 1px solid var(--active-color);
-}
-
-.client-icons {
-  fill: #AFB1B8;
-}
-
-.client-icons:hover,
-.client-icons:focus {
+.clients-icons-items:hover,
+.clients-icons-items:focus {
   fill: var(--active-color);
+  border: 1px solid var(--active-color);
 }
 
 /* projects-styles */
@@ -487,7 +482,7 @@ h1 {
   letter-spacing: 0.03em;
   color: var(--main-color);
   background: var(--button-color);
-  /* box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12); */
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   padding: 6px 22px;
 }
 
@@ -505,14 +500,12 @@ h1 {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  /* margin-top: 20px; */
   margin-bottom: 4px;
 }
 
 .projects .text {
   font-size: 16px;
   line-height: 1.875;
-  /* padding-bottom: 20px; */
 }
 
 .projects {
@@ -649,14 +642,10 @@ a[href*="goo.gl"]:focus {
 .footer-social-item {
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.1);
-  /* border: 1px solid #000000; */
-  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
 }
 
 .footer-social-item:hover {
   background: var(--active-color);
-
-  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
 }
 
 .footer-team-icons {
@@ -666,4 +655,9 @@ a[href*="goo.gl"]:focus {
 .footer-team-icons:hover,
 .footer-team-icons:focus {
   fill: var(--main-white-color);
+}
+
+.footer-icons-items:focus {
+  background-color: var(--active-color);
+  border-radius: 50%;
 }
